feat: 模板代码新增调用通用代码的样例
