# internal/server/template_server/http_server/gin_router/template_router/template.go
@@ -2,8 +2,10 @@ package template_router
 
 import (
 	"github.com/gin-gonic/gin"
+	"layout_template/api/common/common_pb"
 	"layout_template/api/template"
 	"layout_template/internal/service/template_service"
+	"strconv"
 )
 
 // RegisterTemplateRouter 配置路由
@@ -11,10 +13,17 @@ import (
 func RegisterTemplateRouter(engine *gin.Engine, svc *template_service.TemplateService) {
 
 	groupTp := engine.Group("template")
-	groupTp.GET("/:sid/query", func(c *gin.Context) {
+	groupTp.GET("/:base.gameId/query", func(c *gin.Context) {
+		gId, _ := strconv.Atoi(c.Param("base.gameId"))
 		req := &template.QueryTemplateRequest{
-			Sid:  c.Param("sid"),
-			Name: c.DefaultQuery("name", ""),
+			Base: &common_pb.StandardRequestBase{
+				GameId: uint32(gId),
+			},
+			Account: &common_pb.StandardAccount{
+				AccountUId:  c.Query("account.accountUId"),
+				AccountName: c.Query("account.accountName"),
+			},
+			Action: c.Query("action"),
 		}
 		resp, err := svc.QueryTemplate(c.Request.Context(), req)
 		if err != nil {
@@ -23,15 +32,18 @@ func RegisterTemplateRouter(engine *gin.Engine, svc *template_service.TemplateSe
 		}
 		c.JSON(200, resp)
 	})
-	groupTp.POST("/:sid/create", func(c *gin.Context) {
+	groupTp.POST("/:base.gameId/create", func(c *gin.Context) {
+		gId, _ := strconv.Atoi(c.Param("base.gameId"))
 		req := &template.CreateTemplateRequest{
-			RealName: &template.CreateTemplateRequestBody{},
+			Base: &common_pb.StandardRequestBase{
+				GameId: uint32(gId),
+			},
+			Body: &template.CreateTemplateRequestBody{},
 		}
-		if err := c.BindJSON(req.RealName); err != nil {
+		if err := c.BindJSON(req.Body); err != nil {
 			c.JSON(500, err.Error())
 			return
 		}
-		req.Sid = c.Param("sid")
 		resp, err := svc.CreateTemplate(c.Request.Context(), req)
 		if err != nil {
 			c.JSON(400, err.Error())
